Added Rust for RedisGraph

--- a/docs/howtos/redisgraph/index-redisgraph.mdx
+++ b/docs/howtos/redisgraph/index-redisgraph.mdx
@@ -71,6 +71,16 @@ The following links provides you with the available options to get started with 
         description="RedisGraph using Go"
         page="/howtos/redisgraph/using-go"
         />
-</div>
+ </div>
+
+ <div class="col">
+     <RedisCard
+        title="How to query Graph data in Redis using Rust"
+        description="RedisGraph using Rust"
+        page="/howtos/redisgraph/using-rust"
+        />
+ </div>
+
+
 
 </div>
