--- a/docs/howtos/redisgraph/index-redisgraph.mdx
+++ b/docs/howtos/redisgraph/index-redisgraph.mdx
@@ -9,7 +9,7 @@ import RedisCard from '@site/src/theme/RedisCard';
 
 
 
-The following links provides you with the available options to get started with RedisJSON
+The following links provides you with the available options to get started with RedisGraph
 
 <div class="row">
 
