--- a/docs/howtos/redisjson/using-go/index-usinggo.mdx
+++ b/docs/howtos/redisjson/using-go/index-usinggo.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-usinggo
 title: How to cache JSON data in Redis with Go
-sidebar_label: RedisJSON with Go
+sidebar_label: RedisJSON and Go
 slug: /howtos/redisjson/using-go
 ---
 
