--- a/docs/howtos/redisjson/using-java/index-usingjava.mdx
+++ b/docs/howtos/redisjson/using-java/index-usingjava.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-usingjava
 title: How to cache JSON data in Redis with Java
-sidebar_label: RedisJSON with Java
+sidebar_label: RedisJSON and Java
 slug: /howtos/redisjson/using-java
 ---
 
