--- a/docs/develop/dotnet/aspnetcore/rate-limiting/fixed-window/index-rate-limiting.mdx
+++ b/docs/develop/dotnet/aspnetcore/rate-limiting/fixed-window/index-rate-limiting.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-rate-limiting
-title: Fixed Window Rate Limiting with ASP.NET Core & Redis
-sidebar_label: Fixed Window Rate Limiting
+title: How to implement a Fixed Window Rate Limiting app using ASP.NET Core & Redis
+sidebar_label: Fixed Window Rate Limiting app using ASP.NET
 slug: /develop/dotnet/aspnetcore/rate-limiting/fixed-window
 ---
 
