Fixed some syntax

--- a/docs/howtos/redisgraph/redisgraph-cheatsheet/index-redisgraph-cheatsheet.mdx
+++ b/docs/howtos/redisgraph/redisgraph-cheatsheet/index-redisgraph-cheatsheet.mdx
@@ -7,4 +7,4 @@ slug: /howtos/redisgraph/redisgraph-cheatsheet
 
 | Command       | Purpose        | Syntax               |
 | :--------------------- | :---------------------- | :----------------- |
-| <button><b>[GRAPH.QUERY(https://oss.redis.com/redisgraph/commands/#graphquery)</b></button> | Execute a query against a named graph | <code>GRAPH.QUERY <graph name> "<query>"</code> |
+| <button><b>[GRAPH.QUERY](https://oss.redis.com/redisgraph/commands/#graphquery)</b></button> | Execute a query against a named graph | <code>GRAPH.QUERY <graph name> "&lt;query&gt;"</code> |
