Added additional rows, no content to test format

--- a/docs/howtos/redisgraph/redisgraph-cheatsheet/index-redisgraph-cheatsheet.mdx
+++ b/docs/howtos/redisgraph/redisgraph-cheatsheet/index-redisgraph-cheatsheet.mdx
@@ -7,4 +7,21 @@ slug: /howtos/redisgraph/redisgraph-cheatsheet
 
 | Command       | Purpose        | Syntax               |
 | :--------------------- | :---------------------- | :----------------- |
-| <button><b>[GRAPH.QUERY](https://oss.redis.com/redisgraph/commands/#graphquery)</b></button> | Execute a query against a named graph | <code>GRAPH.QUERY <graph name> "&lt;query&gt;"</code> |
+| <button><b>[GRAPH.QUERY](https://oss.redis.com/redisgraph/commands/#graphquery)</b></button> | Execute a query against a named graph | <code>GRAPH.QUERY &ltgraph name&gt "&lt;query&gt;"</code> |
+| <button><b>[GRAPH.RO_QUERY](https://oss.redis.com/redisgraph/commands/#graphro_query)</b></button> | Executes a read only query against a named graph | <code>GRAPH.RO_QUERY <graph name> "&lt;query&gt;" |
+| <button><b>[GRAPH.QUERY ... "MATCH ..."]() | | <code>GRAPH.QUERY <graph name> "&lt; &gt;"</code |
+| <button><b>[GRAPH.QUERY ...]() | | <code>GRAPH.QUERY &ltgraph name&gt "&lt; &gt;"</code> |
+| <button><b>[GRAPH.QUERY ...]() | | <code>GRAPH.QUERY &ltgraph name&gt "&lt; &gt;"</code> |
+| <button><b>[GRAPH.QUERY ...]() | | <code>GRAPH.QUERY &ltgraph name&gt "&lt; &gt;"</code> |
+| <button><b>[GRAPH.QUERY ...]() | | <code>GRAPH.QUERY &ltgraph name&gt "&lt; &gt;"</code> |
+| <button><b>[GRAPH.QUERY ...]() | | <code>GRAPH.QUERY &ltgraph name&gt "&lt; &gt;"</code> |
+| <button><b>[GRAPH.QUERY ...]() | | <code>GRAPH.QUERY &ltgraph name&gt "&lt; &gt;"</code> |
+| <button><b>[GRAPH.QUERY ...]() | | <code>GRAPH.QUERY &ltgraph name&gt "&lt; &gt;"</code> |
+| <button><b>[GRAPH.QUERY ...]() | | <code>GRAPH.QUERY &ltgraph name&gt "&lt; &gt;"</code> |
+| <button><b>[GRAPH.QUERY ...]() | | <code>GRAPH.QUERY &ltgraph name&gt "&lt; &gt;"</code> |
+| <button><b>[GRAPH.QUERY ...]() | | <code>GRAPH.QUERY &ltgraph name&gt "&lt; &gt;"</code> |
+| <button><b>[GRAPH.QUERY ...]() | | <code>GRAPH.QUERY &ltgraph name&gt "&lt; &gt;"</code> |
+| <button><b>[GRAPH.QUERY ...]() | | <code>GRAPH.QUERY &ltgraph name&gt "&lt; &gt;"</code> |
+| <button><b>[GRAPH.QUERY ...]() | | <code>GRAPH.QUERY &ltgraph name&gt "&lt; &gt;"</code> |
+| <button><b>[GRAPH.QUERY ...]() | | <code>GRAPH.QUERY &ltgraph name&gt "&lt; &gt;"</code> |
+
