--- a/docs/howtos/redisgraph/redisgraph-cheatsheet/index-redisgraph-cheatsheet.mdx
+++ b/docs/howtos/redisgraph/redisgraph-cheatsheet/index-redisgraph-cheatsheet.mdx
@@ -13,8 +13,8 @@ slug: /howtos/redisgraph/redisgraph-cheatsheet
 | <button><b>[GRAPH.QUERY ... "MATCH ... OPTIONAL MATCH"](https://oss.redis.com/redisgraph/commands/#optional-match) | The OPTIONAL MATCH clause is a MATCH variant that produces null values for elements that do not match successfully, rather than the all-or-nothing logic for patterns in MATCH clauses. | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH &lt;pattern&gt; OPTIONAL MATCH &lt;pattern&gt;"</code> |
 | <button><b>[GRAPH.QUERY ... "MATCH ... WHERE ..."](https://oss.redis.com/redisgraph/commands/#where) | The WHERE clause is not mandatory, but if you want to filter results, you can specify your predicates here.  Click the link to see supported operations. | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH &lt;pattern&gt; WHERE &lt;pattern&gt;"</code> |
 | <button><b>[GRAPH.QUERY ... "MATCH ... WHERE ... RETURN ..."](https://oss.redis.com/redisgraph/commands/#return) | The RETURN clause essentially defines the result set.  In this way, a tailored result-set is customized. | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH &lt;pattern&gt; WHERE &lt;pattern&gt; RETURN &lt;pattern&gt;"</code> |
-| <button><b>[GRAPH.QUERY ..."MATCH ... WHERE ... RETRUN ... ORDER BY ..."](https://oss.redis.com/redisgraph/commands/#order-by) | ORDER BY specifies that the output be sorted and how. | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH &lt;pattern&gt; WHERE &lt;pattern&gt; RETURN &lt;pattern&gt; ORDER BY &lt;variables&gt; \[ASC\|DESC\]"</code> |
-| <button><b>[GRAPH.QUERY ...]() | | <code>GRAPH.QUERY &lt;graph name&gt; "&lt; &gt;"</code> |
+| <button><b>[GRAPH.QUERY ... "MATCH ... WHERE ... RETRUN ... ORDER BY ..."](https://oss.redis.com/redisgraph/commands/#order-by) | ORDER BY specifies that the output be sorted and how. | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH &lt;pattern&gt; WHERE &lt;pattern&gt; RETURN &lt;pattern&gt; ORDER BY &lt;variables&gt; \[ASC\|DESC\]"</code> |
+| <button><b>[GRAPH.QUERY ... “MATCH … WHERE … RETURN … ORDER BY … SKIP ...”](https://oss.redis.com/redisgraph/commands/#skip) | SKIP optional clause allows for a specified number of records to be omitted from the result set. | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH \<pattern\> WHERE \<pattern\> RETURN \<pattern\> ORDER BY \<variables\> \[ASC \| DESC \] SKIP \<n\>” where \“n\” is an integer</code> |
 | <button><b>[GRAPH.QUERY ...]() | | <code>GRAPH.QUERY &lt;graph name&gt; "&lt; &gt;"</code> |
 | <button><b>[GRAPH.QUERY ...]() | | <code>GRAPH.QUERY &lt;graph name&gt; "&lt; &gt;"</code> |
 | <button><b>[GRAPH.QUERY ...]() | | <code>GRAPH.QUERY &lt;graph name&gt; "&lt; &gt;"</code> |
