--- a/docs/develop/dotnet/aspnetcore/rate-limiting/fixed-window/index-rate-limiting.mdx
+++ b/docs/develop/dotnet/aspnetcore/rate-limiting/fixed-window/index-rate-limiting.mdx
@@ -222,3 +222,11 @@ You will see some of your requests return a `200`, and at least one request retu
 * [Source Code](https://github.com/redis-developer/fixed-rate-limiter-aspnet-core)
 * [How to Implement Sliding Window Rate Limiting with ASP.NET Core & Redis](/develop/dotnet/aspnetcore/rate-limiting/sliding-window)
 * [Configurable Sliding Window Rate Limiting Middleware for Redis & ASP.NET Core](/develop/dotnet/aspnetcore/rate-limiting/middleware)
+
+
+##
+
+<div>
+<a href="https://launchpad.redis.com" target="_blank" rel="noopener" className="link"> <img src="/img/launchpad.png"  className="thumb" loading="lazy" alt="Redis Launchpad" /></a>
+</div>
+
