Fixed some markdown syntax errors, pushing to git for checking.

--- a/docs/howtos/redisgraph/redisgraph-cheatsheet/index-redisgraph-cheatsheet.mdx
+++ b/docs/howtos/redisgraph/redisgraph-cheatsheet/index-redisgraph-cheatsheet.mdx
@@ -16,10 +16,10 @@ slug: /howtos/redisgraph/redisgraph-cheatsheet
 | <button><b>[GRAPH.QUERY ... "MATCH ... WHERE ... RETRUN ... ORDER BY ..."](https://oss.redis.com/redisgraph/commands/#order-by) | ORDER BY specifies that the output be sorted and how. | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH &lt;pattern&gt; WHERE &lt;pattern&gt; RETURN &lt;pattern&gt; ORDER BY &lt;variables&gt; \[ASC\|DESC\]"</code> |
 | <button><b>[GRAPH.QUERY ... "MATCH … WHERE … RETURN … ORDER BY … SKIP ..."](https://oss.redis.com/redisgraph/commands/#skip) | SKIP optional clause allows for a specified number of records to be omitted from the result set. | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH \<pattern\> WHERE \<pattern\> RETURN \<pattern\> ORDER BY \<variables\> \[ASC \| DESC \] SKIP \<n\>" where "n" is an integer</code> |
 | <button><b>[GRAPH.QUERY ... "MATCH … WHERE … RETURN … ORDER BY … LIMIT ..."](https://oss.redis.com/redisgraph/commands/#limit) | LIMIT clause is not mandatory and can be used to limit the number of records returned by a RETURN set. | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH \<pattern\> WHERE \<pattern\> RETURN \<pattern\> ORDER BY \<variables\> \[ASC \| DESC \] LIMIT \<n\>" where "n" is an integer</code> |
-| <button><b>[GRAPH.QUERY ... "MATCH ... CREATE …"](https://oss.redis.com/redisgraph/commands/#create) | CREATE clause is used to introduce new nodes and relationships  | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH \<pattern\> CREATE <nodes\ | relationships\>"</code> |
+| <button><b>[GRAPH.QUERY ... "MATCH ... CREATE …"](https://oss.redis.com/redisgraph/commands/#create) | CREATE clause is used to introduce new nodes and relationships  | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH \<pattern\> CREATE \<nodes\> | relationships\>"</code> |
 | <button><b>[GRAPH.QUERY ... "MATCH … DELETE …"](https://oss.redis.com/redisgraph/commands/#delete) | DELETE clause is used to remove both nodes and relationships | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH \<pattern\> DELETE \<alias\>"</code> |
 | <button><b>[GRAPH.QUERY ... "MATCH … SET …"](https://oss.redis.com/redisgraph/commands/#set) | SET clause is used to create or update properties on nodes and relationships | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH \<pattern\> SET \<property value\>"</code> |
 | <button><b>[GRAPH.QUERY ... "MERGE …"](https://oss.redis.com/redisgraph/commands/#merge) | MERGE clause ensures that a path exists in the graph | <code>GRAPH.QUERY &lt;graph name&gt; "MERGE \<property value\>"</code> |
-| <button><b>[GRAPH.QUERY ... "MATCH … WITH … AS ..."](https://oss.redis.com/redisgraph/commands/#with) | WITH clause allows  parts of queries to be independently executed and have their results handled uniquely. | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH <pattern> WITH <property value> AS <property value>"</code> |
-| <button><b>[GRAPH.QUERY ... "MATCH … UNWIND … AS …"](https://oss.redis.com/redisgraph/commands/#unwind) | UNWIND clause breaks down a given list into a sequence of records. | <code>GRAPH.QUERY &lt;graph name&gt; "&lt; &gt;"</code> |
-| <button><b>[GRAPH.QUERY ... "MATCH … UNION … MATCH"](https://oss.redis.com/redisgraph/commands/#union) | UNION clause is used to combine the result of multiple queries | <code>GRAPH.QUERY &lt;graph name&gt; "&lt; &gt;"</code> |
+| <button><b>[GRAPH.QUERY ... "MATCH … WITH … AS ..."](https://oss.redis.com/redisgraph/commands/#with) | WITH clause allows  parts of queries to be independently executed and have their results handled uniquely. | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH \<pattern\> WITH \<property value\> AS \<property value\>"</code> |
+| <button><b>[GRAPH.QUERY ... "MATCH … UNWIND … AS …"](https://oss.redis.com/redisgraph/commands/#unwind) | UNWIND clause breaks down a given list into a sequence of records. | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH <pattern> UNWIND \<property value\> AS \<property value\>"</code> |
+| <button><b>[GRAPH.QUERY ... "MATCH … UNION … MATCH"](https://oss.redis.com/redisgraph/commands/#union) | UNION clause is used to combine the result of multiple queries | <code>GRAPH.QUERY &lt;graph name&gt; "MATCH \<pattern\> UNION … MATCH \<pattern\>"</code> |
