Added Redis Movies database

--- a/docs/howtos/redisgraph/index-redisgraph.mdx
+++ b/docs/howtos/redisgraph/index-redisgraph.mdx
@@ -82,5 +82,12 @@ The following links provides you with the available options to get started with 
  </div>
 
 
+ <div class="col">
+     <RedisCard
+        title="How to build Movies database app using RedisGraph and NodeJS"
+        description="Building Movies database app using Redis"
+        page="/howtos/redisgraph/redisgraphmovies"
+        />
+ </div>
 
 </div>
