Added RedisGraph Bulk Loader

--- a/docs/howtos/redisgraph/index-redisgraph.mdx
+++ b/docs/howtos/redisgraph/index-redisgraph.mdx
@@ -89,5 +89,18 @@ The following links provides you with the available options to get started with 
         page="/howtos/redisgraph/redisgraphmovies"
         />
  </div>
+</div>
+
+ <div class="row">
+
+ <div class="col">
+     <RedisCard
+        title="Load CSV data into Redis using RedisGraph Bulk Loader"
+        description="RedisGraph Bulk Loader"
+        page="/howtos/redisgraph/csvtograph"
+        />
+ </div>
+
+
 
 </div>
