--- a/docs/howtos/redisgraph/using-rust/index-usingrust.mdx
+++ b/docs/howtos/redisgraph/using-rust/index-usingrust.mdx
@@ -5,9 +5,17 @@ sidebar_label: RedisGraph and Rust
 slug: /howtos/redisgraph/using-rust
 ---
 
-RedisGraph is the fastest graph database that processes complex graph operations in real time, 10x – 600x faster than any other graph database. Show how your data is connected through multiple visualization integrations including RedisInsight, Linkurious, and Graphileon. Query graphs using the industry-standard Cypher query language and easily use graph capabilities from application code.
+RedisGraph is based on a unique approach and architecture that translates Cypher queries to matrix operations executed over a GraphBLAS engine. This new design allows use cases like social graph operation, fraud detection, and real-time recommendation to be executed 10x – 600x faster than any other graph database. Undoubtedly, it is the fastest graph database that processes complex graph operations in real time, 10x – 600x faster than any other graph database. It primariy shows how your data is connected through multiple visualization integrations including RedisInsight, Linkurious, and Graphileon. 
+
+Below are the primary use cases of RedisGraph:
+
+- Recommendation: It allows you to rapidly find connections between your customers and the experiences they want by examining the relationships between them.
+- Graph-aided search: It allows you to search for single or multiple words or phrases and execute full-text and linguistic queries in real time over your graph.
+- Identity and access management: It allows you to define complex resources access permissions as a graph and enable rapid real-time verification of these permissions with a single query.
 
 ## RedisGraph Rust Client
+
+redisgraph-rs is an idiomatic Rust client for RedisGraph, the graph database by Redis.This crate parses responses from RedisGraph and converts them into ordinary Rust values. It exposes a very flexible API that allows you to retrieve a single value, a single record or multiple records using only one function: Graph::query.
 
 
 Follow the steps below to get started with RedisGraph with Rust:
@@ -35,7 +43,7 @@ Follow the steps below to get started with RedisGraph with Rust:
 ### Step 4. Clone the repository
 
  ```bash
-   git clone https://github.com/mitsuhiko/redis-rs
+   git clone https://github.com/malte-v/redisgraph-rs
  ```
 
 ### Step 5. Write a rust program 
