--- a/docs/howtos/redisgraph/csvtograph/index-csvtograph.mdx
+++ b/docs/howtos/redisgraph/csvtograph/index-csvtograph.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-csvtograph
-title: Load CSV data into Redis using RedisGraph Bulk Loader 
-sidebar_label: Load CSV data into Redis using RedisGraph Bulk Loader
+title: How to build RedisGraph databases from CSV inputs in Easy Steps
+sidebar_label: Building RedisGraph databases from CSV inputs 
 slug: /howtos/redisgraph/csvtograph
 ---
 
