--- a/docs/howtos/redisgraph/csvtograph/index-csvtograph.mdx
+++ b/docs/howtos/redisgraph/csvtograph/index-csvtograph.mdx
@@ -7,6 +7,8 @@ slug: /howtos/redisgraph/csvtograph
 
 RedisGraph is the fastest graph database that processes complex graph operations in real time, 10x – 600x faster than any other graph database. Show how your data is connected through multiple visualization integrations including RedisInsight, Linkurious, and Graphileon. Query graphs using the industry-standard Cypher query language and easily use graph capabilities from application code.
 
+![My Image](redisgraph_preview.png)
+
 ## RedisGraph Bulk Loader
 
 [Here is a Python utility](https://github.com/RedisGraph/redisgraph-bulk-loader) for building RedisGraph databases from CSV inputs. The bulk loader utility requires a Python 3 interpreter.
