--- a/docs/howtos/redisgraph/index-redisgraph.mdx
+++ b/docs/howtos/redisgraph/index-redisgraph.mdx
@@ -95,8 +95,8 @@ The following links provides you with the available options to get started with 
 
  <div class="col">
      <RedisCard
-        title="Load CSV data into Redis using RedisGraph Bulk Loader"
-        description="RedisGraph Bulk Loader"
+        title="How to build RedisGraph databases from CSV inputs in Easy Steps"
+        description="Building RedisGraph databases from CSV Inputs"
         page="/howtos/redisgraph/csvtograph"
         />
  </div>
