--- a/docs/howtos/redisgraph/csvtograph/index-csvtograph.mdx
+++ b/docs/howtos/redisgraph/csvtograph/index-csvtograph.mdx
@@ -5,7 +5,8 @@ sidebar_label: Building RedisGraph databases from CSV inputs
 slug: /howtos/redisgraph/csvtograph
 ---
 
-RedisGraph is the fastest graph database that processes complex graph operations in real time, 10x – 600x faster than any other graph database. Show how your data is connected through multiple visualization integrations including RedisInsight, Linkurious, and Graphileon. Query graphs using the industry-standard Cypher query language and easily use graph capabilities from application code.
+RedisGraph is the fastest graph database that processes complex graph operations in real time, 10x – 600x faster than any other graph database. It shows how your data is connected through multiple visualization integrations including RedisInsight, Linkurious, and Graphileon. 
+It allows you to query graphs using the industry-standard Cypher query language and you can easily use graph capabilities from application code.
 
 ![My Image](redisgraph_preview.png)
 
