Adds majority of final content and supporting images.

--- a/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
+++ b/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
@@ -9,57 +9,44 @@ slug: /hacktoberfest/
 
 ## What is Hacktoberfest?
 
-[Hacktoberfest](https://hacktoberfest.digitalocean.com/) is a month-long festival which takes place every year in October.  It is sponsored by DigitalOcean and aims to encourage people to get involved in open source projects.
+[Hacktoberfest](https://hacktoberfest.digitalocean.com/) is a month-long online festival which takes place every year in October.  It is sponsored by [DigitalOcean](https://www.digitalocean.com/) and aims to encourage people to get involved in open source projects.
 
-
-Here's a test video embed to see what it looks like...
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/xdROBvMb4LE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/JZeHxbLm_IQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ## How to get involved
 
-We've created a number of GitHub issues for folks who want to contribute to our documentation and demo apps.  You can find them at "links".
+We've created a number of GitHub issues for folks who want to contribute to our documentation and demo apps.  You can find them at &lt;&lt;TODO links&gt;&gt;.
 
 ### Get a GitHub account and Hacktoberfest account
 
-You'll need a GitHub account to contribute to our repos.  Get a free account at [GitHub.com](github.com).
+You'll need a GitHub account to contribute to our repos.  Sign up for free at [GitHub.com](https://github.com).
 
-You'll also need to [register with Hacktoberfest](https://hacktoberfest.digitalocean.com/register) (you can do this using your GitHub account) if you want to be in with a chance of [earning swag from DigitalOcean](https://hacktoberfest.digitalocean.com/resources/participation).  Please note that Redis is not involved in the allocation or sending of swag.
+You'll also need to [register with Hacktoberfest](https://hacktoberfest.digitalocean.com/register) using your GitHub account if you want to be in with a chance of [earning swag from DigitalOcean](https://hacktoberfest.digitalocean.com/resources/participation).  **Please note that Redis is not involved in allocating or sending swag.**
 
 ### Finding and working on an issue
 
-1. Find a suitable issue using the links above.  Where possible, we have tagged them according to the level of experience required.
+1. Look for a suitable issue here &lt;&lt;TODO link&gt;&gt;.  Where possible, we have tagged them according to the skillset and level of experience required.
 
 2. Read the guidance notes on each issue carefully so you know what's expected of you.
 
-3. Assign the issue to yourself "screen grab".
+3. Add a comment in the issue stating that you're working on it. **To be fair to other contributors, only claim one issue at a time.**
 
-4. Open a pull request within two calendar days.  This is to give more people a fair chance at finding an unassigned issue.
+    ![Example Issue](images/example_issue.png)
 
-5. We will review your pull request and merge it if it's suitable.
+4. **Open a pull request within two calendar days:**
+    * This is to give more people a fair chance at finding an unclaimed issue.
+    * Make sure you reference the issue number in your pull request so that it shows on the issue's page:
 
-### 
+    ![Example Pull Request](images/example_pull_request.png)
 
-This is a level 3 title
+    ![Example Issue with Pull Request](images/example_issue_with_pull_request.png)
 
-* Some list
-* of things
-* to do...
+    * If you don't submit a pull request within two calendar days, we will make the issue available to other contributors.
 
-Maybe we also need...
+5. We will review your pull request. If it's suitable, we'll merge it and add the `hacktoberfest-accepted` label.  **If we feel that further work is required, we'll comment as part of our review.**
 
-1. first
-2. second
-3. third
+**Read DigitalOcean's complete Hacktoberfest rules [here](https://hacktoberfest.digitalocean.com/resources/participation).**
 
-In case we need them, we can do **code samples** or _terminal session_ examples:
+## Looking for more repos?
 
-```bash
-$ npm install
-```
-
-```javascript
-const myFunction = () => {
-  // do something...
-};
-```
+If you're looking for more repos to contribute to during Hacktoberfest, [check out the Hacktoberfest topic on GitHub](https://github.com/topics/hacktoberfest).  **Redis is not responsible for the content of third party repositories.**
