Adds community call to action.

--- a/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
+++ b/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
@@ -47,6 +47,10 @@ You'll also need to [register with Hacktoberfest](https://hacktoberfest.digitalo
 
 **Read DigitalOcean's complete Hacktoberfest rules [here](https://hacktoberfest.digitalocean.com/resources/participation).**
 
+## Join the conversation
+
+Need help with one of our issues, or just want to chat with other contributors?  [Join us on Discord](https://discord.gg/ueQwKUh5Z3)!
+
 ## Looking for more repos?
 
 If you're looking for more repos to contribute to during Hacktoberfest, [check out the Hacktoberfest topic on GitHub](https://github.com/topics/hacktoberfest).  **Redis is not responsible for the content of third party repositories.**
