--- a/docs/howtos/redisgraph/csvtograph/index-csvtograph.mdx
+++ b/docs/howtos/redisgraph/csvtograph/index-csvtograph.mdx
@@ -12,11 +12,11 @@ It allows you to query graphs using the industry-standard Cypher query language 
 
 ## RedisGraph Bulk Loader
 
-[Here is a Python utility](https://github.com/RedisGraph/redisgraph-bulk-loader) for building RedisGraph databases from CSV inputs. The bulk loader utility requires a Python 3 interpreter.
+If you have a bunch of CSV files that you want to load to RedisGraph database, you must try out [this Bulk Loader utility](https://github.com/RedisGraph/redisgraph-bulk-loader). Rightly called RedisGraph Bulk Loader, this tool is written in Python and helps you in building RedisGraph databases from CSV inputs. This utility requires a Python 3 interpreter.
 
 
 
-Follow the steps below to load CSV data into RedisGraph
+Follow the steps below to load CSV data into RedisGraph database:
 
 ### Step 1. Run RedisMod Docker container
 
