--- a/docs/howtos/redisgraph/redisgraphmovies/index-redisgraphmovies.mdx
+++ b/docs/howtos/redisgraph/redisgraphmovies/index-redisgraphmovies.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-redisgraphmovies
-title: Building Movies database app using RedisGraph and NodeJS   
-sidebar_label: Building Movies database app using RedisGraph and NodeJS
+title: Building Movies database app using Redis,React and NodeJS   
+sidebar_label: Building Movies database app using RedisGraph
 slug: /howtos/redisgraph/redisgraphmovies
 ---
 
