--- a/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
+++ b/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
@@ -41,6 +41,10 @@ You'll also need to [register with Hacktoberfest](https://hacktoberfest.digitalo
 
     ![Example Issue with Pull Request](images/example_issue_with_pull_request.png)
 
+    * If you include your Twitter handle, we will give you a shout out.
+
+    * If you're a member of our Discord server, include your Discord handle and we will bestow the **Hacktoberfest 2021** role upon you.
+
     * If you don't submit a pull request within two calendar days, we will make the issue available to other contributors.
 
 5. We will review your pull request. If it's suitable, we'll merge it and add the `hacktoberfest-accepted` label.  **If we feel that further work is required, we'll comment as part of our review.**
