--- a/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
+++ b/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
@@ -43,7 +43,7 @@ You'll also need to [register with Hacktoberfest](https://hacktoberfest.digitalo
 
     * If you include your Twitter handle, we will give you a shout out.
 
-    * If you're a member of our Discord server, include your Discord handle and we will bestow the **Hacktoberfest 2021** role upon you.
+    * If you're a member of our [Discord server](https://discord.gg/ueQwKUh5Z3), include your Discord handle and we will bestow the **Hacktoberfest 2021** role upon you.
 
     * If you don't submit a pull request within two calendar days, we will make the issue available to other contributors.
 
