--- a/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
+++ b/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
@@ -15,7 +15,7 @@ slug: /hacktoberfest/
 
 ## How to get involved
 
-We've created a number of GitHub issues for folks who want to contribute to our documentation and demo apps.  You can find them at &lt;&lt;TODO links&gt;&gt;.
+We've created a number of GitHub issues for folks who want to contribute to our documentation and demo apps.  You can [find them here](https://github.com/search?q=%23hacktoberfest+user%3Aredislabs-training+user%3Aredis-developer+user%3ANodeRedis+label%3Ahacktoberfest&type=Issues&ref=advsearch&l=&l=).
 
 ### Get a GitHub account and Hacktoberfest account
 
@@ -25,7 +25,7 @@ You'll also need to [register with Hacktoberfest](https://hacktoberfest.digitalo
 
 ### Finding and working on an issue
 
-1. Look for a suitable issue here &lt;&lt;TODO link&gt;&gt;.  Where possible, we have tagged them according to the skillset and level of experience required.
+1. Look for a suitable issue [here](https://github.com/search?q=%23hacktoberfest+user%3Aredislabs-training+user%3Aredis-developer+user%3ANodeRedis+label%3Ahacktoberfest&type=Issues&ref=advsearch&l=&l=).  Where possible, we have tagged them according to the skillset and level of experience required.
 
 2. Read the guidance notes on each issue carefully so you know what's expected of you.
 
