--- a/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
+++ b/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
@@ -5,7 +5,7 @@ sidebar_label: Hacktoberfest 2021
 slug: /hacktoberfest/
 ---
 
-![Hacktoberfest Logo](images/hacktoberfest-logo.png)
+![Hacktoberfest Logo](images/hacktoberfest.svg)
 
 ## What is Hacktoberfest?
 
