--- a/docs/howtos/hackernews/index-hackernews.mdx
+++ b/docs/howtos/hackernews/index-hackernews.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-hackernews
-title: HackerNews Clone using RedisJSON
-sidebar_label: How to build a HackerNews Clone using RedisJSON
+title: HackerNews Clone using Redis
+sidebar_label: How to build a HackerNews Clone using Redis
 slug: /howtos/hackernews
 ---
 
@@ -10,7 +10,6 @@ import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
 
-Author: [Ajeet Singh Raina](https://twitter.com/ajeetsraina)
 
 Hacker News (sometimes abbreviated as HN) is a social news website focusing on computer science and entrepreneurship.
 This is a HackerNews clone built upon React, NextJS as a frontend and NodeJS, ExpressJS & Redis as a backend.
