--- a/docs/howtos/frauddetection/index-frauddetection.mdx
+++ b/docs/howtos/frauddetection/index-frauddetection.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-frauddetection
-title: How to build a Fraud Detection System using RedisGears and RedisBloom
-sidebar_label: How to build a Fraud Detection System using RedisGears and RedisBloom
+title: How to build a Fraud Detection System using Redis
+sidebar_label: How to build a Fraud Detection System using Redis
 slug: /howtos/frauddetection
 ---
 import Tabs from '@theme/Tabs';
