--- a/docs/howtos/hackernews/index-hackernews.mdx
+++ b/docs/howtos/hackernews/index-hackernews.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-hackernews
-title: HackerNews Clone using Redis
+title: How to build a HackerNews Clone using Redis
 sidebar_label: How to build a HackerNews Clone using Redis
 slug: /howtos/hackernews
 ---
