Adds contact details.

--- a/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
+++ b/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
@@ -55,3 +55,7 @@ Need help with one of our issues, or just want to chat with other contributors? 
 ## Looking for more repos?
 
 If you're looking for more repos to contribute to during Hacktoberfest, [check out the Hacktoberfest topic on GitHub](https://github.com/topics/hacktoberfest).  **Redis is not responsible for the content of third party repositories.**
+
+## Contact us
+
+Hacktoberfest at Redis is brought to you by Suze Shardlow and Simon Prickett of the Redis Developer Relations team.  [Contact us](mailto:redis.university@redis.com) if you have any questions that aren't addressed here.
