Amends some punctuation.

--- a/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
+++ b/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
@@ -32,7 +32,7 @@ You'll also need to [register with Hacktoberfest](https://hacktoberfest.digitalo
 
 4. **Open a pull request within two calendar days:**
     * This is to give more people a fair chance at finding an unclaimed issue.
-    * Make sure you reference the issue number in your pull request so that it shows on the issue's page:
+    * Make sure you reference the issue number in your pull request so that it shows on the issue's page.
     * If you include your Twitter handle, we will give you a shout out.
     * If you're a member of our [Discord server](https://discord.gg/ueQwKUh5Z3), include your Discord handle and we will bestow the **Hacktoberfest 2021** role upon you.
 
