Adds a link to join our Discord server.

--- a/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
+++ b/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
@@ -60,4 +60,4 @@ If you're looking for more repos to contribute to during Hacktoberfest, [check o
 
 Hacktoberfest at Redis is brought to you by Suze Shardlow and Simon Prickett of the Redis Developer Relations team.  [Contact us](mailto:redis.university@redis.com) if you have any questions that aren't addressed here.  Please note that we are available during UK daytime.
 
-We can't debug or refactor your code for you, but if you need help understanding how the project works, write a post in the Hacktoberfest channel on our Discord server.
+We can't debug or refactor your code for you, but if you need help understanding how the project works, write a post in the Hacktoberfest channel on [our Discord server](https://discord.gg/ueQwKUh5Z3).
