--- a/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
+++ b/docs/get-involved/hacktoberfest/index-hacktoberfest.mdx
@@ -56,6 +56,15 @@ Need help with one of our issues, or just want to chat with other contributors? 
 
 If you're looking for more repos to contribute to during Hacktoberfest, [check out the Hacktoberfest topic on GitHub](https://github.com/topics/hacktoberfest).  **Redis is not responsible for the content of third party repositories.**
 
+## Join us on Twitch
+
+Documentation is often cited as a great way to get your feet wet with open source.  So to demystify the world of technical writing, we will be hosting four live events with our documentation team - follow us on [Twitch](https://www.twitch.tv/redislabs) to get a reminder.  All sessions will be at 9am PT / noon ET / 4pm UTC / 5pm UK / 7pm Israel:
+
+Friday 15th October: Fireside panel - Suze Shardlow with the documentation team: Technical Writing Explained
+Monday 25th October: Fireside 1:1 - Suze Shardlow with Kaitlyn, Technical Writer
+Tuesday 26th October: Fireside 1:1 - Suze Shardlow with Rachel, Technical Writer
+Friday 29th October: Fireside 1:1 - Suze Shardlow with Lance, Documentation Lead
+
 ## Contact us
 
 Hacktoberfest at Redis is brought to you by Suze Shardlow and Simon Prickett of the Redis Developer Relations team.  [Contact us](mailto:redis.university@redis.com) if you have any questions that aren't addressed here.  Please note that we are available during UK daytime.
