--- a/docs/howtos/redisjson/using-nodejs/index-usingnodejs.mdx
+++ b/docs/howtos/redisjson/using-nodejs/index-usingnodejs.mdx
@@ -10,7 +10,7 @@ Node.js has become incredibly popular for both web and mobile application develo
 Node.js is a fast web framework, but adding the power, speed and flexibility of Redis can take it to the next level.Redis is best suited to situations that require data to be retrieved and delivered to the client as quickly as possible
 If you’re using Node, you can use the node-redis module to interact with Redis. If you’re using RediJSON, you can use redis-rejson module to interact with RedisJSON.
 
-The 'ReJSON Module plugin for node_redis' package allows node_redis (2.8+) to interface with the Redis module ReJSON.To use this module, you will need Redis 4.0 or higher and the rejson module installed.
+The 'ReJSON Module plugin for node_redis' package allows node_redis (2.8+) to interface with the Redis module RedisJSON.To use this module, you will need Redis 4.0 or higher and the rejson module installed.
 
 Follow the below steps to get started with RedisJSON and Node.js:
 
