--- a/docs/howtos/redisjson/using-nodejs/index-usingnodejs.mdx
+++ b/docs/howtos/redisjson/using-nodejs/index-usingnodejs.mdx
@@ -38,7 +38,7 @@ Node Redis is a high performance Node.js Redis client.
  npm install redis
 ```
 
-### Step 4.  Install RedisJSON
+### Step 4.  Install RedisJSON module
 
 ```bash
  npm  -i redis-rejson
