--- a/docs/howtos/redisjson/using-ruby/index-usingruby.mdx
+++ b/docs/howtos/redisjson/using-ruby/index-usingruby.mdx
@@ -5,7 +5,8 @@ sidebar_label: RedisJSON and Ruby
 slug: /howtos/redisjson/using-ruby
 ---
 
-rejson-rb is a package that allows storing, updating and querying objects as JSON documents in a Redis database that is extended with the ReJSON module. The package extends redis-rb's interface with ReJSON's API, and performs on-the-fly serialization/deserialization of objects to/from JSON.
+rejson-rb is a package that allows storing, updating and querying objects as JSON documents in a Redis database that is extended with the RedisJSON module. 
+The package extends redis-rb's interface with RedisJSON's API, and performs on-the-fly serialization/deserialization of objects to/from JSON.
 
 ### Step 1. Run RedisJSON docker container
 
